# x13binary

./: CMakeLists.txt  pyproject.toml
python/x13binary/: __main__.py
